# AverVOX-OSS

./: .gitignore  CHANGELOG.md  DOCS.md  LICENSE  QUICK_START-OSS.md  QUICK_START.md  README.md  install.sh  pyproject.toml  requirements.txt
src/avervox/: __init__.py  __main__.py  audio.py  config.py  glib_compat.py  hotkeys.py  hud.py  inserter.py  llm.py  logger.py  main.py  secrets_store.py  settings.py  stt.py  tray.py  tts.py  ui_secrets.py
src/avervox/services/: __init__.py  base.py  direct.py  local.py
tests/: test_config.py  test_main_reload.py  test_secrets.py
