[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avrvx"
version = "0.3.3"
description = "Give your LLMs a voice. Dictate, speak, and converse with any OpenAI-compatible LLM from a global hotkey on Linux."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Carl E. Hartung" },
]
keywords = ["speech", "dictation", "tts", "stt", "voice", "whisper", "piper", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "sounddevice>=0.4.6",
    "webrtcvad>=2.0.10",
    "faster-whisper>=1.0.0",
    "piper-tts>=1.2.0",
    "httpx>=0.27",
    "pynput>=1.7.6",
    "PyYAML>=6.0",
    "numpy>=1.24.0",
]

# PyPI publish target — free edition only. See LINKS.md for URL registry.
[project.urls]
Homepage = "https://github.com/avrvx/AverVOX-OSS"
Repository = "https://github.com/avrvx/AverVOX-OSS"
Issues     = "https://github.com/avrvx/AverVOX-OSS/issues"

[project.scripts]
avrvx = "avervox.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
